fix layout on tablet

--- a/src/CheckIn.css
+++ b/src/CheckIn.css
@@ -1,10 +1,14 @@
 .checkin-container {
+  max-width: 430px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   padding: 20px;
   background: rgba(0, 0, 0, 0);
   height: 100vh;
-  position: relative;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
   padding-bottom: 80px;
   overflow-y: auto;
   overscroll-behavior: none;
